// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "github.com/luids-io/api/schemas/event/common.proto";

package luids.event.v1;
option go_package = "github.com/luids-io/api/event/grpc/pb";

service Archive {
   rpc SaveEvent (SaveEventRequest) returns (SaveEventResponse) {}
}

message SaveEventRequest {
  string     id =1;
  EventType  type = 2;
  int32      code = 3;
  EventLevel level = 4;
  google.protobuf.Timestamp created_ts  = 5;
  google.protobuf.Timestamp received_ts  = 6;
  EventSource source = 7;
  repeated ProcessInfo processors = 8;
  EventData data = 9;
  int32 duplicates = 10;
  string codename = 11;
  string description = 12;
  repeated string tags = 13;
}

message SaveEventResponse {
  string storageID = 1;
}



